# FlowHub

./: .dockerignore  .env.beta.example  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.beta  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  alembic.ini  alembic_a2.ini  alembic_beta.ini  alembic_flowhub.ini  docker-compose.a2.yml  docker-compose.beta.yml  docker-compose.test.yml  docker-compose.yml  nginx-sse.conf  pyproject.toml  requirements-test.txt  requirements.txt
.github/: pull_request_template.md
alembic/: env.py
alembic_a2/: env.py
alembic_beta/: env.py
alembic_flowhub/: env.py  flowhub_016_frozen_schema.py
app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  validation.py
cli/: __init__.py  adapters.py  admin.py  ai.py  backup.py  channels.py  configure.py  create_admin.py  diagnostics.py  health.py  install.py  integrations.py  logs.py  main.py  menu.py  migrate.py  scheduler.py  sources.py  status.py  update.py  users.py
docs/: BACKUP_RESTORE.md  FAQ.md  INSTALLATION.md  MIGRATION_STATUS.md  MORNING_HANDOFF.md  RELEASE_CHECKLIST.md  ROADMAP.md  TROUBLESHOOTING.md  UPGRADE.md  WORKFLOW.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
installer/: __init__.py  install.sh  installer_core.py
locales/: flowhub.pot
plugins/: README.md
scripts/: assert_postgres_junit.py  build_frontend.sh  dev_reset.sh  dev_start.sh  flowhub  flowhub-helper  generate_openapi.sh  lint.sh  test.sh  (+2 more)
(+932 files in other folders)
